--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.2.0",
     "clsx": "^1.1.1",
     "components": "^0.1.0",
+    "framer-motion": "^2.9.4",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
