--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.5",
@@ -11,11 +12,12 @@
     "clsx": "^1.1.1",
     "components": "^0.1.0",
     "framer-motion": "^2.9.4",
+    "graphql": "^15.4.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
-    "react-dropzone": "^11.2.3",
+    "react-dropzone": "^11.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
