--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "apollo-fetch": "^0.7.0",
     "clsx": "^1.1.1",
     "components": "^0.1.0",
     "framer-motion": "^2.9.4",
